# comfyprompts

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  COMFYUI_RESEARCH_SUMMARY.md  LICENSE  PLAN_PROMPT.md  PROMPT.md  README.md  activity.md  fix_plan.md  plan.md  pyproject.toml  ralph-plan.ps1  ralph-plan.sh  ralph.config.json  ralph.ps1  ralph.sh  setup_wizard.py  start_stack.bat  stop_stack.bat
.claude/: settings.json  settings.local.json  settings.local.json.bak
.claude/agents/: blender-addon-dev.md  mcp-tools-dev.md  prompter-dev.md  ralph-architect.md  ralph-critic.md  ralph-deslop.md  ralph-explore.md  ralph-gate-runner.md  ralph-implement.md  ralph-interviewer.md  ralph-planner.md  ralph-playtest-interviewer.md  ralph-quality-reviewer.md  ralph-spec-auditor.md  ralph-validate.md  sdk-developer.md  setup-engineer.md  test-engineer.md  workflow-architect.md  (+1 more)
.ralph/: activity_archive.md  bridge-state.json  human_note.md  last_known_good  memories.md  metrics.jsonl  observations.jsonl  pending_tasks.md  recent_activity.md  spec_audit.json  spec_audit.md
blender/: README.md
docs/: architecture-overview.md  berserkr-chargen-architecture.md  blender-mcp-audit.md  getting-started.md  tool-reference.md  toolchain-audit-2026-03-28.md
pipelines/: RALPH-MANIFEST.md
scripts/: lora_eval_grid.py  smoke_test_workflow.py  workflow_validator.py
tests/: test_blender_pipeline.py  test_mcp_client.py  test_workflow_validation.py
tools/: archive_activity.py  cost_tracker.py  prepare_context.py  ralph_rollback.py  ralph_status.py  smart_gate.py  triage_fix_plan.py
(+415 files in other folders)
